# fmp-core

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: publish.yml
fmp/: config.py  consts.py
fmp/repository/: models.py  mongo.py
